# dex_pytorch

./: .env  .gitignore  .pre-commit-config.yaml  README.md  config.py  dataset.py  makefile  model.py  model_dex.py  model_test.py  preprocess.ipynb  pyproject.toml  requirements copy.txt  requirements.txt  sagemaker_local.ipynb  train.ipynb
.github/workflows/: merge_master.yml
deploy_pkg/code/: requirements.txt
deployment/: inference.py  model_deploy.ipynb  test_inference.py
docs/: _config.yml  index.md
tools/: train_tools.py  transformer.py
