[tool.poetry]
name = "dex_torch"
version = "0.1.0"
description = "DEX implementation using PyTorch"
authors = ["Piotr Laczkowski <piotr.laczkowski@vestiairecollective.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
pytorch-lightning = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
